<resources>
    <string name="app_name">SimpleNote</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="or">Or</string>
    <string name="don_t_have_any_account_register_here">Don’t have any account? Register here</string>
    <string name="let_s_login">Let&apos;s Login</string>
    <string name="and_notes_your_idea">And notes your idea</string>
    <string name="register">Register</string>
    <string name="and_start_taking_notes">And start taking notes</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="retype_password">Retype Password</string>
    <string name="already_have_an_account_login_here">Already have an account? Login here</string>
    <string name="start_your_journey">Start Your Journey</string>
    <string name="every_big_step_start_with_small_step_nnotes_your_first_idea_and_start_n_your_journey">Every big step start with small step.\nNotes your first idea and start\n your journey!</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="add_note">add note</string>
    <string name="empty_note">empty note</string>
    <string name="home_navigation">home navigation</string>
    <string name="arrow">arrow</string>
    <string name="title">Title</string>
    <string name="please_input_your_current_password_first">Please input your current password first</string>
    <string name="current_password">Current Password</string>
    <string name="now_create_your_new_password">Now, create your new password</string>
    <string name="new_password">New Password</string>
    <string name="password_should_contain_a_z_a_z_0_9">Password should contain a-z, A-Z, 0-9</string>
    <string name="retype_new_password">Retype New Password</string>
    <string name="submit_new_password">Submit New Password</string>
    <string name="back">Back</string>
    <string name="change_password">Change Password</string>
    <string name="notes">Notes</string>
    <string name="search_image">search_image</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="are_you_sure_you_want_to_log_out_from_the_application">Are you sure you want to log out from the application?</string>
    <string name="log_out">Log Out</string>

    <!-- NEW -->
    <string name="sex">Sex</string>
    <string name="man">Man</string>
    <string name="woman">Woman</string>
</resources>
